# fast-sentence-segment

./: .gitignore  .pre-commit-config.yaml  CITATION_TESTS_README.md  GITHUB_ISSUE_MLA_DETECTOR.md  IMPLEMENTATION_SUMMARY.md  ISSUE-30-TEST-SUMMARY.md  LICENSE  Makefile  README.md  config.sh  debug_denorm.py  debug_full_pipeline.py  debug_full_trace.py  debug_merger.py  debug_normalize_quotes.py  debug_pipeline.py  debug_raw_spacy.py  debug_segment_steps.py  debug_segment_text.py  debug_spacy_split.py  mypy.ini  pyproject.toml  requirements.txt  setup.py
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  publish.yml
docs/: index.html  segmentation-examples.md
fast_sentence_segment/: __init__.py  cli.py
fast_sentence_segment/bp/: segmenter.py
fast_sentence_segment/core/: __init__.py  base_object.py  stopwatch.py
fast_sentence_segment/dmo/: __init__.py  abbreviation_merger.py  abbreviation_splitter.py  abbreviations.py  bracket_content_normalizer.py  bullet_point_cleaner.py  citation_normalizer.py  dehyphenator.py  delimiters_to_periods.py  dialog_formatter.py  ellipsis_normalizer.py  ellipsis_sentence_merger.py  ellipsis_sentence_splitter.py  exclamation_brand_normalizer.py  group_quoted_sentences.py  leading_ellipsis_merger.py  list_item_splitter.py  list_marker_normalizer.py  middle_initial_normalizer.py  mla_citation_detector.py  newlines_to_periods.py  normalize_quotes.py  numbered_list_normalizer.py  numbered_title_merger.py  ocr_artifact_fixer.py  parenthetical_merger.py  post_process_sentences.py  question_exclamation_splitter.py  quote_attribution_merger.py  quote_closing_splitter.py  quote_utils.py  spacy_doc_segmenter.py  strip_trailing_period_after_quote.py  title_name_merger.py  unclosed_quote_merger.py  unicode_token_normalizer.py  unwrap_hard_wrapped_text.py  url_normalizer.py
fast_sentence_segment/svc/: __init__.py  perform_paragraph_segmentation.py  perform_sentence_segmentation.py
resources/scripts/: copy_setup.ps1  download-en_core_web_sm.ps1  download-en_core_web_sm.sh  download-spacy-model.ps1  download-spacy-model.sh
tests/: conftest.py  numbered_list_normalizer_test.py  segment_text_1_test.py  segment_text_2_test.py  segmenter_test.py  test_abbreviation_splitter.py  test_abbreviations.py  test_basic_segmentation.py  test_easy_basic_capitalization.py  test_easy_basic_numbers.py  test_easy_edge_cases.py  test_easy_multiple_sentences.py  test_easy_two_sentences.py  test_easy_whitespace_variations.py  test_ellipsis_normalizer.py  test_error_handling.py  test_full_book_segmentation.py  test_group_quoted_sentences.py  test_hard_academic_citations.py  test_hard_ambiguous_boundaries.py  test_hard_complex_dialogue.py  test_hard_consecutive_abbreviations.py  test_hard_legal_text.py  test_hard_lists_bullets.py  test_hard_malformed_valid_text.py  test_hard_real_world_examples.py  test_hard_sentence_ending_abbreviations.py  test_medium_decimal_numbers.py  test_medium_ellipses.py  test_medium_initials.py  test_medium_mixed_abbreviations.py  test_medium_parentheses.py  test_medium_simple_dialogue.py  test_medium_time_abbreviations.py  test_medium_urls_emails.py  test_normalize_quotes.py  test_paragraphs.py  test_post_process_sentences.py  test_question_exclamation_splitter.py  test_quoted_text.py  (+5 more)
tests/benchmark/: __init__.py  test_golden_rules.py
tests/data/: 01-single-author-doyle.txt  02-single-author-dickens.txt  03-splice-doyle-dickens.txt  04-splice-austen-wells.txt  05-ai-chatgpt.txt  06-ai-claude.txt  07-splice-human-ai.txt  08-triple-splice-doyle-dickens-austen.txt  09-splice-verse-prose.txt  austen-pride-and-prejudice.txt  bronte-jane-eyre.txt  conrad-heart-of-darkness.txt  dickens-a-tale-of-two-cities.txt  doyle-the-hound-of-the-baskervilles.txt  tolkien-the-lord-of-the-rings.txt  twain-adventures-of-huckleberry-finn.txt  wells-the-time-machine.txt
tests/easy/: test_basic_punctuation.py  test_simple_quotes.py  test_single_sentences.py
tests/golden_rules/: __init__.py  test_ellipsis_chaos.py  test_ellipsis_comprehensive.py  test_ellipsis_handling.py  test_list_handling.py  test_middle_initial.py  test_period_before_closing_punctuation.py  test_quote_attribution.py  test_thirty_nine_steps.py
tests/hard/: test_abbreviation_all_positions.py  test_abbreviation_surface_forms.py  test_apa_citations_comprehensive.py  test_citation_edge_cases_comprehensive.py  test_citation_patterns_comprehensive.py  test_complex_punctuation.py  test_extreme_edge_cases.py  test_handcrafted_realworld.py  test_handcrafted_scholarly.py  test_handcrafted_titles.py  test_headlines_titles.py  test_long_complex_sentences.py  test_mla_citations_comprehensive.py  test_nested_quotations.py  test_parenthetical_sentences.py  test_pseudo_citations_comprehensive.py  (+3 more)
(+80 files in other folders)
