[tool.poetry]
authors = [
  "Craig Trim <craigtrim@gmail.com>",
]

maintainers = [
  "Craig Trim <craigtrim@gmail.com>",
]

description = "Fast and Efficient Sentence Segmentation"
license = "MIT"
name = "fast-sentence-segment"
readme = "README.md"
version = "1.2.0"

keywords = ["nlp", "text", "preprocess", "segment"]
repository = "https://github.com/craigtrim/fast-sentence-segment"

classifiers = [
  "Development Status :: 4 - Beta",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/craigtrim/fast-sentence-segment/issues"

[tool.poetry.dependencies]
python = "^3.9"
spacy = "^3.8.0"

[tool.poetry.dev-dependencies]
en-core-web-sm = {path = "resources/lib/en_core_web_sm-3.8.0.tar.gz"}
pre-commit = "^2.20.0"
pytest = "*"
ruff = "*"

[tool.poetry.scripts]
segment = "fast_sentence_segment.cli:main"

[tool.poetry.build]
generate-setup-file = true

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.ruff]
line-length = 200
exclude = ["__init__.py", ".venv", ".git"]

[tool.ruff.lint]
ignore = ["F401", "F403", "E501"]
