[tool.poetry]
authors = [
  "Craig Trim <craigtrim@gmail.com>",
]

maintainers = [
  "Craig Trim <craigtrim@gmail.com>",
]

description = "Fast and Efficient Sentence Segmentation"
license = "MIT"
name = "fast-sentence-segment"
readme = "README.md"
version = "1.3.0"

keywords = ["nlp", "text", "preprocess", "segment"]
repository = "https://github.com/craigtrim/fast-sentence-segment"

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Text Processing :: Linguistic",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Operating System :: OS Independent",
  "Typing :: Typed",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/craigtrim/fast-sentence-segment/issues"

[tool.poetry.dependencies]
python = "^3.9"
spacy = "^3.8.0"

[tool.poetry.dev-dependencies]
en-core-web-sm = {path = "resources/lib/en_core_web_sm-3.8.0.tar.gz"}
pre-commit = "^2.20.0"
pytest = "*"
ruff = "*"

[tool.poetry.scripts]
segment = "fast_sentence_segment.cli:main"
segment-file = "fast_sentence_segment.cli:file_main"

[tool.poetry.build]
generate-setup-file = true

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.ruff]
line-length = 200
exclude = ["__init__.py", ".venv", ".git"]

[tool.ruff.lint]
ignore = ["F401", "F403", "E501"]
