[project]
name = "fast-sentence-segment"
version = "1.8.2"
description = "Fast and Efficient Sentence Segmentation"
readme = "README.md"
license = "MIT"
authors = [
  {name = "Craig Trim", email = "craigtrim@gmail.com"},
]
maintainers = [
  {name = "Craig Trim", email = "craigtrim@gmail.com"},
]
keywords = ["nlp", "text", "preprocess", "segment"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Text Processing :: Linguistic",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Operating System :: OS Independent",
  "Typing :: Typed",
]
requires-python = ">=3.9,<3.13"
dynamic = ["dependencies"]

[project.urls]
Repository = "https://github.com/craigtrim/fast-sentence-segment"
"Bug Tracker" = "https://github.com/craigtrim/fast-sentence-segment/issues"

[project.scripts]
segment = "fast_sentence_segment.cli:main"
segment-file = "fast_sentence_segment.cli:file_main"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
spacy = "^3.8.0"

[tool.poetry.group.dev.dependencies]
en-core-web-sm = {path = "resources/lib/en_core_web_sm-3.8.0.tar.gz"}
pre-commit = "^2.20.0"
pytest = "*"
ruff = "*"

[tool.poetry.build]
generate-setup-file = true

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.ruff]
line-length = 200
exclude = ["__init__.py", ".venv", ".git"]

[tool.ruff.lint]
ignore = ["F401", "F403", "E501"]
